--- a/public/style.css
+++ b/public/style.css
@@ -28,6 +28,35 @@ h1 {
   background-color: #fafafa;
   margin-bottom: 10px;
 }
+.loading {
+  text-align: center;
+  font-style: italic;
+  color: #555;
+  display: none; /* Initially hidden */
+  margin-bottom: 10px;
+}
+
+.loading::after {
+  content: "...";
+  animation: dots 1s steps(5, end) infinite;
+}
+
+@keyframes dots {
+  0%,
+  20% {
+    color: rgba(0, 0, 0, 0);
+  }
+  40% {
+    color: rgba(0, 0, 0, 0.3);
+  }
+  60% {
+    color: rgba(0, 0, 0, 0.5);
+  }
+  80%,
+  100% {
+    color: rgba(0, 0, 0, 0.7);
+  }
+}
 
 .message {
   margin: 8px 0;
